ignoring many huge pics

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,50 @@ Ghost_tiling.nb
 Drawing_heart.nb
 
 Drawing_heart2.nb
+index.html
+Paper_colors.pdf
+Ghost_pics/day_night.jpg
+Ghost_pics/day_night.tiff
+Ghost_pics/day_night2.jpg
+Ghost_pics/day_night2.tiff
+Ghost_pics/dots.pdf
+Ghost_pics/dots.tiff
+Ghost_pics/dots3.pdf
+Ghost_pics/green_red.jpg
+Ghost_pics/green_red.tiff
+Ghost_pics/harvard.jpg
+Ghost_pics/harvard.tiff
+Ghost_pics/index.html
+Ghost_pics/original_ghost.tiff
+Glauber_Gallery/for_Alisa/Height_f_200_495.pdf
+Glauber_Gallery/for_Alisa/Height_f_av_200_495.pdf
+Glauber_Gallery/for_Alisa/Height_f_fluc_200_495.pdf
+Glauber_Gallery/ggg2/12gon_initial/aa.gif
+Glauber_Gallery/ggg4/1/qvol1.gif
+Glauber_Gallery/ggg5/1/12_qvol1.gif
+Glauber_Gallery/ggg5/2/12_qvol2.gif
+Glauber_Gallery/ggg6/1/27_sim1.gif
+Glauber_Gallery/ggg6/2/27_sim2.gif
+Glauber_Gallery/ggg6/3/27_sim3.gif
+Glauber_Gallery/ggg6/4/27_sim4.gif
+Glauber_Gallery/ggg6/5/27_sim5.gif
+Glauber_Gallery/ggg7/sauron.gif
+Glauber_Gallery/Simulations/movie.gif
+Glauber_Gallery/Simulations/movie180.gif
+Glauber_Gallery/Simulations/reversed.gif
+Glauber_Gallery/Simulations/reversed180.gif
+Heart_pics/pink_only.tiff
+Heart_pics/pink_red.jpg
+Heart_pics/pink_red.tiff
+Heart_pics/raisin.jpg
+Heart_pics/raisin.tiff
+Heart_pics/red_blue.jpg
+Heart_pics/red_blue.tiff
+Heart_pics/red_greenish.jpg
+Heart_pics/red_greenish.tiff
+Heart_pics/red_yellow.jpg
+Heart_pics/red_yellow.tiff
+Heart_pics/traditional_color.jpg
+Heart_pics/traditional_color.tiff
+Heart_pics/UVA_colors_huge.tiff
+Heart_pics/Heart1_Data/Drawing_heart1.nb
